--- a/ApologiesGame/boards.html
+++ b/ApologiesGame/boards.html
@@ -370,96 +370,96 @@
             </li>
 
             <!-- Classic -->
-            <li class="thumb" data-src="Classic_FullBoard.jpg" data-title="Classic – full board" data-alt="Classic board shown fully assembled" data-desc="Classic: a nod to the original Sorry! game colors and simple, clean style.">
+            <li class="thumb" data-src="Classic_FullBoard.jpg" data-title="Classic – full board" data-alt="Classic board shown fully assembled" data-desc="This board was designed with the OG Sorry! board in mind for the color choices and the added classic Star at the end.">
               <button type="button" aria-label="Show Classic full board">
                 <img src="Classic_FullBoard.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Classic_AngleView1.jpg" data-title="Classic – angle view" data-alt="Classic board angled view" data-desc="Classic: a nod to the original Sorry! game colors and simple, clean style.">
+            <li class="thumb" data-src="Classic_AngleView1.jpg" data-title="Classic – angle view" data-alt="Classic board angled view" data-desc="This board was designed with the OG Sorry! board in mind for the color choices and the added classic Star at the end.">
               <button type="button" aria-label="Show Classic angle view">
                 <img src="Classic_AngleView1.jpg" alt="" loading="lazy" />
               </button>
             </li>
 
             <!-- Christmas -->
-            <li class="thumb" data-src="Christmas_FullBoard.jpg" data-title="Christmas – full board" data-alt="Christmas themed board shown fully" data-desc="Christmas: a festive holiday theme — great as a gift or to bring out in December.">
+            <li class="thumb" data-src="Christmas_FullBoard.jpg" data-title="Christmas – full board" data-alt="Christmas themed board shown fully" data-desc="This is a Christmas inspired board with a marble board color for the snow, brown pathing for a gingerbread vibe and gold, silver, red and green for the players. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Christmas full board">
                 <img src="Christmas_FullBoard.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Christmas_AngleView1.jpg" data-title="Christmas – angle view" data-alt="Christmas themed board angled view" data-desc="Christmas: a festive holiday theme — great as a gift or to bring out in December.">
+            <li class="thumb" data-src="Christmas_AngleView1.jpg" data-title="Christmas – angle view" data-alt="Christmas themed board angled view" data-desc="This is a Christmas inspired board with a marble board color for the snow, brown pathing for a gingerbread vibe and gold, silver, red and green for the players. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Christmas angle view">
                 <img src="Christmas_AngleView1.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Christmas_Back.jpg" data-title="Christmas – back" data-alt="Back side of Christmas themed board" data-desc="Christmas: a festive holiday theme — great as a gift or to bring out in December.">
+            <li class="thumb" data-src="Christmas_Back.jpg" data-title="Christmas – back" data-alt="Back side of Christmas themed board" data-desc="This is a Christmas inspired board with a marble board color for the snow, brown pathing for a gingerbread vibe and gold, silver, red and green for the players. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Christmas back">
                 <img src="Christmas_Back.jpg" alt="" loading="lazy" />
               </button>
             </li>
 
             <!-- CB (Apologies theme back) -->
-            <li class="thumb" data-src="CB_FullBoard.jpg" data-title="CB – full board" data-alt="Board shown fully assembled" data-desc="CB: the signature Apologies board style with the ‘When Sorry isn’t enough’ back.">
+            <li class="thumb" data-src="CB_FullBoard.jpg" data-title="ColorBlind – full board" data-alt="Board shown fully assembled" data-desc="This board was designed with colorblind taken into account. I used <a href='https://www.color-blindness.com/coblis-color-blindness-simulator/' target='_blank' rel='noopener'>Coblis</a> to test out several color combinations and found each of these colors to be distinguishable for most types of color blindness. It definitely needs a better name though so if you've got an idea please let me know!">
               <button type="button" aria-label="Show CB full board">
                 <img src="CB_FullBoard.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="CB_AngleView1.jpg" data-title="CB – angle view" data-alt="Board angled view" data-desc="CB: the signature Apologies board style with the ‘When Sorry isn’t enough’ back.">
+            <li class="thumb" data-src="CB_AngleView1.jpg" data-title="ColorBlind – angle view" data-alt="Board angled view" data-desc="This board was designed with colorblind taken into account. I used <a href='https://www.color-blindness.com/coblis-color-blindness-simulator/' target='_blank' rel='noopener'>Coblis</a> to test out several color combinations and found each of these colors to be distinguishable for most types of color blindness. It definitely needs a better name though so if you've got an idea please let me know!">
               <button type="button" aria-label="Show CB angle view">
                 <img src="CB_AngleView1.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="CB_Back.jpg" data-title="CB – back" data-alt="Back side of board showing Apologies text" data-desc="CB: the signature Apologies board style with the ‘When Sorry isn’t enough’ back.">
+            <li class="thumb" data-src="CB_Back.jpg" data-title="ColorBlind – back" data-alt="Back side of board showing Apologies text" data-desc="This board was designed with colorblind taken into account. I used <a href='https://www.color-blindness.com/coblis-color-blindness-simulator/' target='_blank' rel='noopener'>Coblis</a> to test out several color combinations and found each of these colors to be distinguishable for most types of color blindness. It definitely needs a better name though so if you've got an idea please let me know!">
               <button type="button" aria-label="Show CB back">
                 <img src="CB_Back.jpg" alt="" loading="lazy" />
               </button>
             </li>
 
             <!-- Galaxy -->
-            <li class="thumb" data-src="Galaxy_FullBoard.jpg" data-title="Galaxy – full board" data-alt="Galaxy themed board shown fully" data-desc="Galaxy: a sparkly space theme with star accents and bold color pops.">
+            <li class="thumb" data-src="Galaxy_FullBoard.jpg" data-title="Galaxy – full board" data-alt="Galaxy themed board shown fully" data-desc="I got this cool filament and wanted to try it out so I came up with a theme for it. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Galaxy full board">
                 <img src="Galaxy_FullBoard.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Galaxy_AngleView1.jpg" data-title="Galaxy – angle view" data-alt="Galaxy themed board angled view" data-desc="Galaxy: a sparkly space theme with star accents and bold color pops.">
+            <li class="thumb" data-src="Galaxy_AngleView1.jpg" data-title="Galaxy – angle view" data-alt="Galaxy themed board angled view" data-desc="I got this cool filament and wanted to try it out so I came up with a theme for it. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Galaxy angle view">
                 <img src="Galaxy_AngleView1.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Galaxy_Back.jpg" data-title="Galaxy – back" data-alt="Back side of galaxy themed board" data-desc="Galaxy: a sparkly space theme with star accents and bold color pops.">
+            <li class="thumb" data-src="Galaxy_Back.jpg" data-title="Galaxy – back" data-alt="Back side of galaxy themed board" data-desc="I got this cool filament and wanted to try it out so I came up with a theme for it. Please note: The base of the board in this print is a more premium filament so this board costs $60 to account for the added material costs.">
               <button type="button" aria-label="Show Galaxy back">
                 <img src="Galaxy_Back.jpg" alt="" loading="lazy" />
               </button>
             </li>
 
             <!-- Neon -->
-            <li class="thumb" data-src="Neon_FullBoard.jpg" data-title="Neon – full board" data-alt="Neon board shown fully" data-desc="Neon: high-contrast dark base with bright neon accents for maximum pop.">
+            <li class="thumb" data-src="Neon_FullBoard.jpg" data-title="Neon – full board" data-alt="Neon board shown fully" data-desc="This board glows in black light! The colors are made with fluorescent filament and the white lights up alright too. I wouldn't recommend playing a full game under a black light but it's definitely a cool visual.">
               <button type="button" aria-label="Show Neon full board">
                 <img src="Neon_FullBoard.jpg" alt="" loading="lazy" />
               </button>
             </li>
-            <li class="thumb" data-src="Neon_AngleView1.jpg" data-title="Neon – angle view" data-alt="Neon board angled view" data-desc="Neon: high-contrast dark base with bright neon accents for maximum pop.">
+            <li class="thumb" data-src="Neon_AngleView1.jpg" data-title="Neon – angle view" data-alt="Neon board angled view" data-desc="This board glows in black light! The colors are made with fluorescent filament and the white lights up alright too. I wouldn't recommend playing a full game under a black light but it's definitely a cool visual.">
               <button type="button" aria-label="Show Neon angle view">
                 <img src="Neon_AngleView1.jpg" alt="" loading="lazy" />
               </button>
             </li>
 
             <!-- Pastel -->
-            <li class="thumb" data-src="Pastel_FullBoard_Clipped.jpg" data-title="Pastel – full board" data-alt="Pastel board shown fully" data-desc="Pastel: soft, light colors with a clean, friendly look.">
+            <li class="thumb" data-src="Pastel_FullBoard_Clipped.jpg" data-title="Pastel – full board" data-alt="Pastel board shown fully" data-desc="Sadly I forgot to take pictures of this board so this is all you get for now. Very nice pastel themed board.">
               <button type="button" aria-label="Show Pastel full board">
                 <img src="Pastel_FullBoard_Clipped.jpg" alt="" loading="lazy" />
               </button>
             </li>
           </ul>
 
-          <p class="muted" style="margin:10px 2px 0;">More photos can be added anytime—just drop the new files in the folder and duplicate a thumbnail block.</p>
+          <!-- <p class="muted" style="margin:10px 2px 0;">More photos can be added anytime—just drop the new files in the folder and duplicate a thumbnail block.</p> -->
         </div>
       </div>
 
       <div>
         <h2>Price & Ordering</h2>
         <div class="callout">
-          <p style="margin:0;"><strong>$50 + GST</strong> per board.</p>
+          <p style="margin:0;"><strong>$50-$60 + GST</strong> per board.</p>
         </div>
 
         <p>To order, email <a href="mailto:apologies@jsbg.ca?subject=Apologies%20Board%20Order">apologies@jsbg.ca</a>.</p>
@@ -471,9 +471,16 @@
 
         <h3>What you get</h3>
         <ul>
-          <li>Travel-sized board with built-in storage (pegs + cards).</li>
-          <li>High-contrast numbering and clear routing arrows.</li>
-          <li>Optional decorative themes and custom colorways (within the color limit).</li>
+          <li>Travel-sized board with built-in storage.</li>
+          <li>6 pegs for each player (extra 2 of each in case they get lost).</li>
+          <li>Standard deck of cards.</li>
+        </ul>
+
+        <h3>3D Printing Quality and Factory Seconds</h3>
+        <ul>
+          <li>There is some variability in 3d printing and while I'm constantly striving to improve the finish and consistency on my prints there are occasional slight imperfections in the prints. These will always be minimal and won't impact functionality in any way.</li>
+          <li>I do my best to be up front about this and don't hide the imperfections in the photos. I think the worst of them is the close up of the Classic. This is not a standard finish (you can compare to the other boards) but it might happen. If you have extremely high standards and require a more pristine then let me know and if you're willing to accept additional some costs for prints you deem unnacceptable then we can make it work.</li>
+          <li>All that being said, I too tend to have a little too high standards and will sometimes end up with "factory second" boards that I'm unwilling to give out. They still function fine but the quality isn't good enough for me to be willing to gift someone. If you're interested in the factory seconds let me know, they're $20 a set to allow me to recoup some costs however the sets might not match and I hopefully don't have much stock lol.</li>
         </ul>
 
         <a class="btn" href="mailto:apologies@jsbg.ca?subject=Apologies%20Board%20Order&body=Hi%20Shaun%2C%0A%0AI%27d%20like%20to%20order%20an%20Apologies%20board.%0A%0AStyle%3A%20%0AColors%20(4%20per%20side%20max)%3A%20%0ACustom%20decorations%3A%20%0A%0AThanks!" style="margin-top:6px;">Email to Order</a>
@@ -529,7 +536,7 @@
         stageImg.alt = alt;
         stageImg.setAttribute('data-zoom-title', title);
         stageCaption.textContent = title + ' — Tap the image to zoom.';
-        stageDesc.textContent = desc;
+        stageDesc.innerHTML = desc;
 
         setCurrentThumb(t);
         // No auto-scroll here — prevents the page from bouncing/jumping on mobile.
