Add QR code information for game rules

--- a/ApologiesGame/boards.html
+++ b/ApologiesGame/boards.html
@@ -474,6 +474,7 @@
           <li>Travel-sized board with built-in storage.</li>
           <li>6 pegs for each player (extra 2 of each in case they get lost).</li>
           <li>Standard deck of cards.</li>
+          <li>There are no physical game rules included. There are 2 QR codes on the boards that you can scan that will take you to <a href='https://jsbg.ca/ApologiesGameRules/' target='_blank' rel='noopener'>this rules page</a>.</li>
         </ul>
 
         <h3>3D Printing Quality and Factory Seconds</h3>
