Update email contact for suggestions in index.html

--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -437,7 +437,7 @@ img.zoomable { cursor: zoom-in; }
       </div>
       <div class="header-actions">
         <a class="btn" href="#overview" aria-label="Jump to overview">Top</a>
-        <a class="btn" href="mailto:apologies@jsbg.ca" aria-label="Email suggestions">Email</a>
+        <a class="btn" href="mailto:printing@jsbg.ca?subject=Apologies%20Suggestions" aria-label="Email suggestions">Email</a>
       </div>
     </div>
   </header>
@@ -643,7 +643,7 @@ img.zoomable { cursor: zoom-in; }
           <div class="section-title">
             <h2>Suggestions</h2>
           </div>
-          <p>Any suggestions or problems: email <a href="mailto:apologies@jsbg.ca">apologies@jsbg.ca</a> and I’ll get back to you.</p>
+          <p>Any suggestions or problems: email <a href="mailto:printing@jsbg.ca">printing@jsbg.ca</a> and I’ll get back to you.</p>
           <div class="callout">
             <strong>Tip:</strong> If you’re emailing about a rule, include a photo of the board state. It makes fixes way faster.
           </div>
