Remove extra email button from boards.html

--- a/ApologiesGame/boards.html
+++ b/ApologiesGame/boards.html
@@ -484,7 +484,7 @@
           <li>All that being said, I too tend to have a little too high standards and will sometimes end up with "factory second" boards that I'm unwilling to give out. They still function fine but the quality isn't good enough for me to be willing to gift someone. If you're interested in the factory seconds let me know, they're $20 a set to allow me to recoup some costs however the sets might not match and I hopefully don't have much stock lol.</li>
         </ul>
 
-        <a class="btn" href="mailto:printing@jsbg.ca?subject=Apologies%20Board%20Order&body=Hi%20Shaun%2C%0A%0AI%27d%20like%20to%20order%20an%20Apologies%20board.%0A%0AStyle%3A%20%0AColors%20(4%20per%20side%20max)%3A%20%0ACustom%20decorations%3A%20%0A%0AThanks!" style="margin-top:6px;">Email to Order</a>
+<!--   Extra email button at the bottom     <a class="btn" href="mailto:printing@jsbg.ca?subject=Apologies%20Board%20Order&body=Hi%20Shaun%2C%0A%0AI%27d%20like%20to%20order%20an%20Apologies%20board.%0A%0AStyle%3A%20%0AColors%20(4%20per%20side%20max)%3A%20%0ACustom%20decorations%3A%20%0A%0AThanks!" style="margin-top:6px;">Email to Order</a> -->
       </div>
     </section>
   </main>
