Add 'Buy a Copy' section and update changelog
Added a section for purchasing game copies and updated the changelog.

--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -455,6 +455,7 @@ img.zoomable { cursor: zoom-in; }
           <a href="#special-cards">Special Cards <span class="hint">quick abilities</span></a>
           <a href="#variants">Variants <span class="hint">2 / 3 / 6 players</span></a>
           <a href="#suggestions">Suggestions <span class="hint">feedback</span></a>
+          <a href="#buyme">Buy Me! <span class="hint">board options</span></a>
           <a href="#changelog">Change Log <span class="hint">versions</span></a>
         </div>
       </nav>
@@ -660,11 +661,21 @@ img.zoomable { cursor: zoom-in; }
 
         <div class="divider"></div>
 
+        <section id="buyme">
+          <div class="buyme-title">
+            <h2>Buy a Copy!</h2>
+          </div>
+          <p>If you're interested in purchasing another or your own copy of the game check out the <a href="https://jsbg.ca/ApologiesGame/boards">Boards Page</a> to see the existing boards or aim to make one of your very own!</p>
+        </section>
+
+        <div class="divider"></div>
+
         <section id="changelog">
           <div class="section-title">
             <h2>Change Log</h2>
           </div>
           <ul>
+            <li><strong>V1.1</strong> - Updated email addresses and added link to boards page.</li>
             <li><strong>V1</strong> – Finalized rules and variants.</li>
           </ul>
         </section>
