Revise title, footer, and content descriptions
Updated title and footer content, modified dashboard label, and added note about site creation.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shaun Adams — JSBG</title>
+  <title>JSBG</title>
   <meta name="description" content="Shaun Adams — Analyst & Process Improvement specialist. Data, operations, and custom 3D printing services in Peace River, AB." />
 
   <!-- Open Graph -->
@@ -119,7 +119,7 @@
             <span class="chip">Data Analysis</span>
             <span class="chip">Process Mapping</span>
             <span class="chip">SOPs & Documentation</span>
-            <span class="chip">Dashboards (DOMO)</span>
+            <span class="chip">Data Visualization Dashboards</span>
             <span class="chip">Lean Six Sigma (GB in progress)</span>
           </div>
         </div>
@@ -217,14 +217,14 @@
 
           <article class="card">
             <h2>Notes</h2>
-            <p class="muted">This site is intentionally simple and fast. No trackers, no cookies.</p>
+            <p class="muted">This site is intentionally simple and fast. No trackers, no cookies and in large part, made by ChatGPT. I'll be uploading changes over time to make it more my own.</p>
           </article>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-      <div>© <span id="y"></span> JSBG • Made in Alberta</div>
+      <div>© <span id="y"></span> JSBG</div>
     </footer>
   </div>
 
