--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -330,6 +330,9 @@
 
     /* ===== Print tweaks (nice bonus) ===== */
 @media print {
+  .no-print {
+    display: none !important;
+  }
   /* --- Page setup --- */
   @page { margin: 0.5in; } /* adjust: 0.4in if you want tighter */
   html, body {
@@ -690,7 +693,7 @@ img.zoomable { cursor: zoom-in; }
 
         <div class="divider"></div>
 
-        <section id="suggestions">
+        <section id="suggestions" class="no-print">
           <div class="section-title">
             <h2>Suggestions</h2>
           </div>
@@ -711,7 +714,7 @@ img.zoomable { cursor: zoom-in; }
 
         <div class="divider"></div>
 
-        <section id="buyme">
+        <section id="buyme" class="no-print">
           <div class="buyme-title">
             <h2>Buy a Copy!</h2>
           </div>
@@ -720,7 +723,7 @@ img.zoomable { cursor: zoom-in; }
 
         <div class="divider"></div>
 
-        <section id="changelog">
+        <section id="changelog" class="no-print">
           <div class="section-title">
             <h2>Change Log</h2>
           </div>
