Update contact description and tagline

--- a/card/index.html
+++ b/card/index.html
@@ -175,8 +175,8 @@
         </a>
         <div>
           <h1>Shaun Adams</h1>
-          <p class="sub">JSBG • 3D printing + board games</p>
-          <span class="pill">Save my contact • Share yours</span>
+          <p class="sub">JSBG Consulting, Data Analytics and 3D Printing Services</p>
+          <span class="pill">Brinting Ideas to Life</span>
         </div>
       </div>
 
