Update favicon and logo in index.html
Updated favicon links and changed logo image source.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>JSBG Consulting | Process improvement, automation, and analytics (Peace River, AB)</title>
   <meta name="description" content="JSBG Consulting (Shaun Adams) helps organizations simplify operations through process improvement, workflow automation, and data collection/analysis—based in Peace River, Alberta and remote-friendly." />
 
-  <link rel="icon" href="assets/img/logo.png" />
-  <link rel="stylesheet" href="assets/site.css" />
+  <link rel="icon" href="/assets/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png">
+
 
   <!-- Open Graph -->
   <meta property="og:title" content="JSBG Consulting" />
@@ -26,7 +29,7 @@
   <header class="header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="JSBG Consulting home">
-        <img src="assets/img/logo.png" alt="JSBG logo" />
+        <img src="assets/img/Logo_wSlogan_NoBG.png" alt="JSBG logo" class="site-logo"/>
         <span class="wordmark">JSBG Consulting</span>
       </a>
       <nav class="nav" aria-label="Primary">
@@ -195,6 +198,7 @@
     </section>
 
     <footer class="footer">
+      <img src="/assets/img/logo.png" alt="JSBG Consulting" class="footer-logo">
       <div>© <span id="y"></span> JSBG</div>
     </footer>
   </main>
