--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>JSBG Consulting | Process improvement, automation, and analytics (Peace River, AB)</title>
   <meta name="description" content="JSBG Consulting (Shaun Adams) helps organizations simplify operations through process improvement, workflow automation, and data collection/analysis—based in Peace River, Alberta and remote-friendly." />
 
-  <link rel="icon" href="/assets/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="JSBG" />
+  <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
 
   <!-- Open Graph -->
