--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image" />
 
+  <link rel="stylesheet" href="/assets/site.css" />
   <link rel="canonical" href="https://jsbg.ca/" />
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="JSBG Consulting home">
-        <img src="assets/img/Logo_wSlogan_NoBG.png" alt="JSBG logo" class="site-logo"/>
+        <img src="/assets/img/Logo_wSlogan_NoBG.png" alt="JSBG logo" class="site-logo"/>
         <span class="wordmark">JSBG Consulting</span>
       </a>
       <nav class="nav" aria-label="Primary">
@@ -205,7 +206,7 @@
     </footer>
   </main>
 
-  <script src="assets/site.js"></script>
+  <script src="/assets/site.js"></script>
 
   <!-- Structured data -->
   <script type="application/ld+json">
