Update logo image references in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:description" content="Process improvement, automation, and analytics. Based in Peace River, AB (remote-friendly)." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jsbg.ca/" />
-  <meta property="og:image" content="https://jsbg.ca/assets/img/logo-slogan.png" />
+  <meta property="og:image" content="https://jsbg.ca/assets/img/Logo_wSlogan_NoBG.png" />
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -201,7 +201,7 @@
     </section>
 
     <footer class="footer">
-      <img src="/assets/img/logo.png" alt="JSBG Consulting" class="footer-logo">
+      <img src="/assets/img/LogoOnly_NoBG.png" alt="JSBG Consulting" class="footer-logo">
       <div>© <span id="y"></span> JSBG</div>
     </footer>
   </main>
@@ -215,7 +215,7 @@
     "@type":"ProfessionalService",
     "name":"JSBG Consulting",
     "url":"https://jsbg.ca/",
-    "image":"https://jsbg.ca/assets/img/logo-slogan.png",
+    "image":"https://jsbg.ca/assets/img/Logo_wSlogan_NoBG.png",
     "areaServed":"CA",
     "address":{
       "@type":"PostalAddress",
