--- a/index.html
+++ b/index.html
@@ -20,20 +20,21 @@
   <meta property="og:description" content="Process improvement, automation, and analytics. Based in Peace River, AB (remote-friendly)." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jsbg.ca/" />
-  <meta property="og:image" content="https://jsbg.ca/assets/img/Logo_wSlogan_NoBG.png" />
+  <meta property="og:image" content="https://jsbg.ca/assets/img/logo-slogan.png" />
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="stylesheet" href="/assets/site.css" />
+
   <link rel="canonical" href="https://jsbg.ca/" />
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
       <a class="brand" href="/" aria-label="JSBG Consulting home">
-        <img src="/assets/img/Logo_wSlogan_NoBG.png" alt="JSBG logo" class="site-logo"/>
-        <span class="wordmark">JSBG Consulting</span>
+        <img src="/assets/img/logo-slogon-noBG.png" alt="JSBG Consulting" class="site-logo"/>
+        <span class="sr-only">JSBG Consulting</span>
       </a>
       <nav class="nav" aria-label="Primary">
         <a href="#services">Services</a>
@@ -201,12 +202,12 @@
     </section>
 
     <footer class="footer">
-      <img src="/assets/img/LogoOnly_NoBG.png" alt="JSBG Consulting" class="footer-logo">
+      <img src="/assets/img/logo.png" alt="JSBG Consulting" class="footer-logo">
       <div>© <span id="y"></span> JSBG</div>
     </footer>
   </main>
 
-  <script src="/assets/site.js"></script>
+  <script src="assets/site.js"></script>
 
   <!-- Structured data -->
   <script type="application/ld+json">
@@ -215,7 +216,7 @@
     "@type":"ProfessionalService",
     "name":"JSBG Consulting",
     "url":"https://jsbg.ca/",
-    "image":"https://jsbg.ca/assets/img/Logo_wSlogan_NoBG.png",
+    "image":"https://jsbg.ca/assets/img/logo-slogan.png",
     "areaServed":"CA",
     "address":{
       "@type":"PostalAddress",
